test fix for height on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,15 +15,17 @@ body {
     color: $primary-color;
     font-family: 'Open Sans',
         sans-serif;
+}
 
-
+// fix resizing on mobile when address bar disappears
+body,
+html {
+    height: 100%;
 }
 
 .wrapper {
     height: 100vh;
-    padding: 0 2rem;
     background-color: $secondary-color;
-
 }
 
 .wrapper::before {
@@ -40,6 +42,7 @@ body {
 header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     position: fixed;
     top: 0;
     left: 0;
@@ -77,6 +80,7 @@ header {
     list-style: none;
     width: 8rem;
     transition: all 0.3s ease-in-out;
+
 }
 
 #menu:checked~.nav-links {
@@ -102,6 +106,7 @@ header {
     font-weight: bold;
     text-decoration: none;
     transition: all 0.3s ease-in-out;
+    color: $primary-color;
 }
 
 .nav-item a:hover {
@@ -112,8 +117,6 @@ header {
     z-index: 2;
     padding-top: 5rem;
     height: 100%;
-    // display: grid;
-    // grid-template-rows: 2fr 1fr;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
